# elate

./: .gitignore  CITATION.cff  README.md  elastic.py  elate.py  pyproject.toml  requirements.txt  tutorial.ipynb
.github/workflows/: python-test.yml
src/: elastic.py  elate.py
src/ELATE/: __init__.py  elate.py  refdata.py
tests/: test_init_1.py
